test/types/file/freadNoInt.good
freadNoInt.chpl:4: error: Unhandled system error: bad format (1002) in channel.read(inout a:int) with path /home/mppf/chapel/svn_ferguson/test/types/file/freadNoInt.txt offset 0
