test/types/file/freadNoInt.chpl
var myInt: int;
var f = open("freadNoInt.txt", "r").reader();

f.read(myInt);
